# CloudSeaManor

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  07_褰掓。涓庡簾寮僜01_鏃ф枃妗开发提示词.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LABELS.md  README.md  VERSIONS.md  install-hooks.sh  replace.js  replace2.js  开发提示词.txt
02_工程主代码/CloudSeaManor/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeLists_test.txt  CMakePresets.json  CloudSeamanor_common.props  CloudSeamanor_core.vcxproj  CloudSeamanor_core.vcxproj.filters  CloudSeamanor_game.sln  CloudSeamanor_game.vcxproj  CloudSeamanor_game.vcxproj.filters  build-game.ps1  build.bat  build_debug.bat  generate_placeholders.ps1  install_assets.ps1  launch.vs.json  skills-config.json  test_cmake.bat
02_工程主代码/CloudSeaManor/assets/: RESOURCE_GUIDE.md
02_工程主代码/CloudSeaManor/assets/audio/: README_AUDIO_REQUIREMENTS.md
02_工程主代码/CloudSeaManor/assets/config/: social_system.cfg
02_工程主代码/CloudSeaManor/assets/configs/: sprite_mapping.csv
02_工程主代码/CloudSeaManor/assets/data/: AchievementTable.csv  BuffEffectTable.csv  BuildingUpgradeTable.csv  CropTable.csv  FestivalDecorations.json  Gift_Preference.json  HungerTable.csv  MailRuleTable.csv  NPC_Texts.json  NpcBirthdays.json  NpcDeliveryTable.csv  NpcGossip.json  PriceTable.csv  QuestTable.csv  RecipeTable.csv  Schedule_Data.csv  SeedDropTable.csv  SpiritBeastEvolution.csv  SpiritBeastSkills.csv  SpiritBeastTable.csv  SpiritItemTable.csv  TeaBushTable.csv  TeaTable.csv  achievement_rewards.csv  items.csv  npc_name_map.json  recipes.csv  schema_version.json  spirit_realm_areas.csv  spirit_realm_bosses.csv  spirit_realm_encounters.csv  spirit_realm_layers.csv
02_工程主代码/CloudSeaManor/assets/maps/: greenhouse.tmx  prototype_farm.tmx  spirit_realm_layer1.tmx  spirit_realm_layer2.tmx  spirit_realm_layer3.tmx
02_工程主代码/CloudSeaManor/assets/sprites/: UI_SPRITE_PLAN.md  npc_villagers.atlas.json  tiles_farm.atlas.json  tiles_world.atlas.json
02_工程主代码/CloudSeaManor/build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CloudSeamanor_core.vcxproj  CloudSeamanor_core.vcxproj.filters  CloudSeamanor_game.sln  CloudSeamanor_game.vcxproj  CloudSeamanor_game.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
02_工程主代码/CloudSeaManor/configs/: audio.json  feature_toggles.cfg  festival_bgm.json  gameplay.cfg  newbie_7day_goals.cfg  nvidia_image_generation.cfg  performance_budget.cfg  scene_bgm.json  sprite_themes.csv  system_unlock_flow.cfg  ui_layout.json  ui_layout_schema.json
02_工程主代码/CloudSeaManor/docs/: ART_PIPELINE_GUIDE.md  BACKEND_TASKS.md  CLOUD_SEA_MANOR_UI_DESIGN.md  DATA_DRIVEN_AUDIT_REPORT.md  DATA_PIPELINE_WORKFLOW.md  DATA_REGISTRY_SCHEMA.md  DATA_TABLE_MAINTENANCE_MANUAL.md  DATA_TABLE_SCHEMAS.md  DOC_CODE_CONSISTENCY_CHECKLIST.md  ENGINEERING_STANDARDS.md  FRONTEND_UI_TASKS.md  ITERATION_PLAN_ARCH_REVIEW_2026Q2.md  NVIDIA_IMAGE_GENERATION_INTEGRATION.md  PROJECT_ROADMAP.md  RESOURCE_SPEC_PLACEHOLDER_GUIDE.md  SUPPLEMENTARY_TASKS.md  TASKS.md  TASKS_backup.md  TEST_REPORT.md  TEST_REPORT_V2.md  【开发任务】_代码实现阶段_执行清单.md  【规划】_UI资源规划_V1.0_20260422.md
02_工程主代码/CloudSeaManor/docs/design/: 【执行稿】_云海山庄_7天_28天留存循环设计_V1_20260428.md
02_工程主代码/CloudSeaManor/examples/: CMakeLists.txt  GameImageGenerationIntegration.cpp  NvidiaImageIntegrationExamples.cpp
02_工程主代码/CloudSeaManor/include/CloudSeamanor/: AllDefine.hpp  AssetBridge.hpp  AudioManager.hpp  BuffSystem.hpp  CloudGuardianContract.hpp  CloudSeaManor.hpp  CloudSystem.hpp  ContractSystem.hpp  CropData.hpp  DayCycleRuntime.hpp  DiarySystem.hpp  DynamicLifeSystem.hpp  EventBus.hpp  FarmingLogic.hpp  FarmingSystem.hpp  FestivalSystem.hpp  FishingSystem.hpp  GameApp.hpp  GameAppFarming.hpp  GameAppHud.hpp  GameAppNpc.hpp  GameAppRuntimeTypes.hpp  GameAppSave.hpp  GameAppScene.hpp  GameAppSpiritBeast.hpp  GameAppState.hpp  GameAppText.hpp  GameAppWeather.hpp  GameClock.hpp  GameConfig.hpp  GameRuntime.hpp  GameWorldState.hpp  GameWorldSystems.hpp  InputManager.hpp  Interactable.hpp  InteractionSystem.hpp  Inventory.hpp  LevelUpSystem.hpp  LoadingScreen.hpp  Logger.hpp  (+63 more)
02_工程主代码/CloudSeaManor/mods/example_mod/: mod.json
02_工程主代码/CloudSeaManor/scripts/data/: export_tables.py  validate_tables.py  verify_p0_food_mvp.py
02_工程主代码/CloudSeaManor/src/app/: main.cpp
02_工程主代码/CloudSeaManor/src/domain/: AtmosphereState.cpp  BuffEffectTable.cpp  BuffSystem.cpp  CloudGuardianContract.cpp  CloudSystem.cpp  ContractSystem.cpp  CropData.cpp  DiarySystem.cpp  DynamicLifeSystem.cpp  FestivalGameplayMvp.cpp  FestivalMiniGameSystem.cpp  FestivalSystem.cpp  FishingSystem.cpp  GameClock.cpp  HungerSystem.cpp  HungerTable.cpp  Interactable.cpp  Inventory.cpp  MainPlotSystem.cpp  ManorEcologySystem.cpp  NpcDevelopmentSystem.cpp  PickupDrop.cpp  Player.cpp  PlayerMemorySystem.cpp  RecipeData.cpp  RelationshipSystem.cpp  SeedDropTable.cpp  SkillSystem.cpp  Stamina.cpp  TeaBush.cpp  TeaBushTable.cpp  TeaGarden.cpp  TeaProductData.cpp  TeaQualityCalculator.cpp  TeaSpiritDexSystem.cpp  TeaTable.cpp  ToolSystem.cpp  WorkshopSystem.cpp
02_工程主代码/CloudSeaManor/src/engine/: AtmosphereRenderer.cpp  AudioManager.cpp  BattleField.cpp  BattleManager.cpp  BattleRenderer.cpp  BattleUI.cpp  BattleZoneLoader.cpp  DayCycleRuntime.cpp  DialogueEngine.cpp  EventBus.cpp  FarmingSystem.cpp  FestivalRuntimeData.cpp  FishingMiniGame.cpp  GameApp.cpp  GameAppFarming.cpp  GameAppHud.cpp  GameAppInput.cpp  GameAppMenu.cpp  GameAppNpc.cpp  GameAppSave.cpp  GameAppScene.cpp  GameAppSpiritBeast.cpp  (+68 more)
02_工程主代码/CloudSeaManor/tests/: CloudAndClockTest.cpp  InputManagerTest.cpp  InventoryTest.cpp  SkillSystemTest.cpp  StaminaTest.cpp  TestFramework.hpp  TestRunner.cpp  catch2Compat.hpp  catch2_main.cpp
02_工程主代码/CloudSeaManor/tools/: preview_sprites.py  requirements.txt  scan_layer_rules.py  validate_crop_table.py  validate_daily_dialogue.py  validate_dialogue_tokens.py  validate_heart_h3.py  validate_resource_specs.py  validate_social_panel_data.py  validate_spring_crops.py
05_归档与废弃/03_早期原型/cpp_mvp/: CMakeLists.txt  README.md
(+832 files in other folders)
